// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1049.9090833947007,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1049.9090833947007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": -84.63931936533464,
    },
    "isLeaf": false,
    "length": 577.4499958670854,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": 204.08567856820804,
    },
    "path": "/root/src",
    "visible": true,
    "width": 367.4681791881452,
    "x0": 356.9690883541982,
    "y0": 20.998181667894013,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 224.824836613554,
      "y": 6,
      "z": -129.00430982731194,
    },
    "isLeaf": false,
    "length": 316.41174514367697,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 224.824836613554,
      "y": 6,
      "z": 29.20156274452654,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 209.11840460377994,
    "x0": 370.26563431166403,
    "y0": 41.892753886768816,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 172.545235462609,
      "y": 6,
      "z": 228.37633828271262,
    },
    "isLeaf": false,
    "length": 198.35453406678397,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 277.104437764499,
      "y": 6,
      "z": 228.37633828271262,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 209.11840460377994,
    "x0": 370.26563431166403,
    "y0": 379.19907124932064,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": -155.4966703334748,
    },
    "isLeaf": true,
    "length": 126.8640142435263,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": -92.06466321171166,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 80.98805265001886,
    "x0": 383.5621802691297,
    "y0": 62.787326105643615,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": -7.738083871073698,
    },
    "isLeaf": true,
    "length": 126.86401424352624,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": 55.69392325068942,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 80.98805265001886,
    "x0": 383.5621802691297,
    "y0": 210.54591256804474,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": 189.23499087545406,
    },
    "isLeaf": true,
    "length": 156.5653896290343,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 174.05620659413916,
      "y": 506,
      "z": 267.5176856899712,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 80.98805265001886,
    "x0": 383.5621802691297,
    "y0": 400.09364346819547,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.2204521032777,
      "y": 4,
      "z": 537.4318125460254,
    },
    "isLeaf": false,
    "length": 314.9727250184102,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 353.69772295195287,
      "y": 4,
      "z": 537.4318125460254,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 524.9545416973502,
    "x0": 209.98181667894013,
    "y0": 629.9454500368204,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.271365402245351,
      "y": 6,
      "z": 417.7421770390296,
    },
    "isLeaf": false,
    "length": 62.99454500368199,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 49.22408876748966,
      "y": 6,
      "z": 417.7421770390296,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 104.99090833947002,
    "x0": 220.48090751288714,
    "y0": 636.2449045371886,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 4.101591644065749,
      "y": 506,
      "z": 404.8247562938926,
    },
    "isLeaf": true,
    "length": 51.669682980548146,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 4.101591644065749,
      "y": 506,
      "z": 430.65959778416664,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 48.36659822380082,
    "x0": 229.91829253216534,
    "y0": 641.9073355487556,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.95272336524425,
      "y": 6,
      "z": 619.3247210508121,
    },
    "isLeaf": false,
    "length": 151.1869080088369,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 421.94181337260835,
      "y": 6,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 251.9781800147282,
    "x0": 482.9581783615622,
    "y0": 793.7312670463937,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 259.4341465515156,
      "y": 506,
      "z": 569.8603087566166,
    },
    "isLeaf": true,
    "length": 32.53805194103222,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 279.51936379906635,
      "y": 506,
      "z": 569.8603087566166,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 40.17043449510163,
    "x0": 499.39153792774016,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 316.0379406127951,
      "y": 506,
      "z": 569.8603087566166,
    },
    "isLeaf": true,
    "length": 32.53805194103222,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 336.1231578603459,
      "y": 506,
      "z": 569.8603087566166,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 40.17043449510152,
    "x0": 555.9953319890197,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 372.64173467407466,
      "y": 506,
      "z": 569.8603087566166,
    },
    "isLeaf": true,
    "length": 32.53805194103222,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 392.7269519216254,
      "y": 506,
      "z": 569.8603087566166,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 40.17043449510163,
    "x0": 612.5991260502992,
    "y0": 803.5912827861005,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.47727469874985,
      "y": 506,
      "z": 607.5474800283846,
    },
    "isLeaf": true,
    "length": 23.11625912309023,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.6487482407691,
      "y": 506,
      "z": 607.5474800283846,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 56.342947084038656,
    "x0": 499.39153792774016,
    "y0": 845.9893504668395,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.47727469874985,
      "y": 506,
      "z": 640.5237548911816,
    },
    "isLeaf": true,
    "length": 23.116259123090344,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.6487482407691,
      "y": 506,
      "z": 640.5237548911816,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 56.342947084038656,
    "x0": 499.39153792774016,
    "y0": 878.9656253296365,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.47727469874985,
      "y": 506,
      "z": 673.5000297539787,
    },
    "isLeaf": true,
    "length": 23.116259123090344,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.6487482407691,
      "y": 506,
      "z": 673.5000297539787,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 56.342947084038656,
    "x0": 499.39153792774016,
    "y0": 911.9419001924335,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 338.2099336782732,
      "y": 506,
      "z": 605.8904496054616,
    },
    "isLeaf": true,
    "length": 39.604396554488744,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 338.2099336782732,
      "y": 506,
      "z": 625.6926478827061,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 32.08417820063312,
    "x0": 572.1678445779567,
    "y0": 845.9893504668395,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 386.7274714450843,
      "y": 506,
      "z": 605.8904496054616,
    },
    "isLeaf": true,
    "length": 39.604396554488744,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 386.7274714450843,
      "y": 506,
      "z": 625.6926478827061,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 32.08417820063312,
    "x0": 620.6853823447677,
    "y0": 845.9893504668395,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 342.31827356981773,
      "y": 506,
      "z": 652.8898579647305,
    },
    "isLeaf": true,
    "length": 14.872190407391031,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 382.6191315535398,
      "y": 506,
      "z": 652.8898579647305,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 80.60171596744419,
    "x0": 572.1678445779567,
    "y0": 895.453762761035,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 342.31827356981773,
      "y": 506,
      "z": 677.6220641118283,
    },
    "isLeaf": true,
    "length": 14.872190407391145,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 382.6191315535398,
      "y": 506,
      "z": 677.6220641118283,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 80.60171596744419,
    "x0": 572.1678445779567,
    "y0": 920.1859689081327,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -44.55560507867736,
      "y": 506,
      "z": -41.86828127679645,
    },
    "isLeaf": true,
    "length": 208.34308126941886,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -44.55560507867736,
      "y": 506,
      "z": 62.303259357912964,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 129.47465688163305,
    "x0": 140.7070664805061,
    "y0": 156.04594840584883,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 113.34961534815454,
      "y": 506,
      "z": 201.33177272312201,
    },
    "isLeaf": true,
    "length": 41.37767004050602,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 113.34961534815454,
      "y": 506,
      "z": 222.02060774337502,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 15.602439683448779,
    "x0": 355.54839550643015,
    "y0": 440.9873552129955,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 458.50307115881657,
    },
    "isLeaf": true,
    "length": 19.985982261179515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 468.4960622894063,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": -25.981776939533468,
    "y0": 703.5065755935217,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -44.55560507867736,
      "y": 506,
      "z": -41.86828127679645,
    },
    "isLeaf": true,
    "length": 208.34308126941886,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -44.55560507867736,
      "y": 506,
      "z": 62.303259357912964,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 129.47465688163305,
    "x0": 140.7070664805061,
    "y0": 156.04594840584883,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 113.34961534815454,
      "y": 506,
      "z": 201.33177272312201,
    },
    "isLeaf": true,
    "length": 41.37767004050602,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 113.34961534815454,
      "y": 506,
      "z": 222.02060774337502,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 15.602439683448779,
    "x0": 355.54839550643015,
    "y0": 440.9873552129955,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 458.50307115881657,
    },
    "isLeaf": true,
    "length": 19.985982261179515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 468.4960622894063,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": -25.981776939533468,
    "y0": 703.5065755935217,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -78,
      "y": 2,
      "z": -164,
    },
    "isLeaf": false,
    "length": 344,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -78,
      "y": 2,
      "z": 8,
    },
    "path": "/root",
    "visible": true,
    "width": 344,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -126,
      "y": 4,
      "z": -152,
    },
    "isLeaf": true,
    "length": 296,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -126,
      "y": 4,
      "z": -4,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 200,
    "x0": 24,
    "y0": 24,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -176,
      "y": 502,
      "z": 82,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -76,
      "y": 502,
      "z": 82,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 200,
    "x0": 24,
    "y0": 332,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -71.5,
      "y": 2,
      "z": -160.75,
    },
    "isLeaf": false,
    "length": 357,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -71.5,
      "y": 2,
      "z": 17.75,
    },
    "path": "/root",
    "visible": true,
    "width": 357,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -194.3696996466431,
      "y": 4,
      "z": -152.75,
    },
    "isLeaf": true,
    "length": 325,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -194.3696996466431,
      "y": 4,
      "z": 9.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 79.26060070671377,
    "x0": 16,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.86969964664313,
      "y": 4,
      "z": -152.75,
    },
    "isLeaf": false,
    "length": 325,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -75.86969964664313,
      "y": 4,
      "z": 9.75,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 125.7393992932862,
    "x0": 111.26060070671377,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -115.36969964664313,
      "y": 6,
      "z": -198.8364106351551,
    },
    "isLeaf": true,
    "length": 76.65435745937961,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -115.36969964664313,
      "y": 6,
      "z": -160.5092319054653,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 14.739399293286198,
    "x0": 127.26060070671377,
    "y0": 32,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -115.36969964664313,
      "y": 6,
      "z": -75.2592319054653,
    },
    "isLeaf": true,
    "length": 200.3456425406204,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -115.36969964664313,
      "y": 6,
      "z": 24.91358936484491,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 14.739399293286198,
    "x0": 127.26060070671377,
    "y0": 124.65435745937961,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -119.05454946996468,
      "y": 504,
      "z": 83,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": -111.68484982332157,
      "y": 504,
      "z": 83,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 14.739399293286198,
    "x0": 127.26060070671377,
    "y0": 333,
    "z0": 4,
  },
]
`;
